force-app/main/default/objects/Visit_Accompany__c/Visit_Accompany__c.object-meta.xml
<CustomObject>
    <label>Visit Accompany</label>
    <nameField>
        <displayFormat>VA-{0000}</displayFormat>
        <label>Visit Accompany Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Accompany</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>