force-app/main/default/objects/Visit_Accompany__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visit Accompany</relationshipLabel>
    <relationshipName>Visit_Accompany</relationshipName>
    <type>Lookup</type>
</CustomField>