force-app/main/default/objects/Visit_Accompany__c/fields/JA_employee__c.field-meta.xml
<CustomField>
    <fullName>JA_employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JA employee</label>
    <type>Checkbox</type>
</CustomField>