force-app/main/default/objects/Visit_Accompany__c/fields/Marketing_representative__c.field-meta.xml
<CustomField>
    <fullName>Marketing_representative__c</fullName>
    <inlineHelpText>איש שיווק מתלווה</inlineHelpText>
    <label>Marketing representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>