force-app/main/default/objects/Visit_Accompany__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <formula>Visit__r.Meeting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>