force-app/main/default/objects/Visit_Accompany__c/fields/Meeting_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_End_Time__c</fullName>
    <formula>Visit__r.Meeting_End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting End Time</label>
    <type>Text</type>
</CustomField>