force-app/main/default/objects/Visit_Accompany__c/fields/Meeting_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Start_Time__c</fullName>
    <formula>Visit__r.Meeting_Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Start Time</label>
    <type>Text</type>
</CustomField>