force-app/main/default/objects/Visit_Accompany__c/fields/Mitkan__c.field-meta.xml
<CustomField>
    <fullName>Mitkan__c</fullName>
    <formula>Visit__r.Mitkan_Name_txt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mitkan</label>
    <type>Text</type>
</CustomField>