force-app/main/default/objects/Visit_Accompany__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Visit Accompany</relationshipLabel>
    <relationshipName>Visit_Accompany</relationshipName>
    <type>Lookup</type>
</CustomField>