force-app/main/default/objects/Visit_Accompany__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>First_Name__c</columns>
    <columns>Visit__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>